[package]
name = "bittorrent-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_bencode = "0.2.3"
serde_bytes = "0.11.12" 
sha-1 = "^0.9.6"
hex = "0.4.3"
reqwest = { version = "0.11.18", features = ["json", "blocking"] }